k8s/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-petclinic-to-postgres
  namespace: petclinic-dev
spec:
  podSelector:
    matchLabels: {app: postgres}
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector:
            matchLabels: {app: spring-petclinic}
      ports:
        - {protocol: TCP, port: 5432}
